--- a/Bogdan.Melnik/C_Sharp/CharCounter/CharCounter.csproj
+++ b/Bogdan.Melnik/C_Sharp/CharCounter/CharCounter.csproj
@@ -38,6 +38,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Counter\HashCounter.cs" />
+    <Compile Include="Counter\ICounter.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
