try to do anything

--- a/George.Koshelev/Task3_Vector3D/.project
+++ b/George.Koshelev/Task3_Vector3D/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Task3_Vector3D</name>
+	<name>Copy of Task3_Vector3D(Generics)</name>
 	<comment></comment>
 	<projects>
 	</projects>
