Add stack implementation.

--- a/Bogdan.Melnik/C_Plus_Plus/Stack/Makefile
+++ b/Bogdan.Melnik/C_Plus_Plus/Stack/Makefile
@@ -1,7 +1,7 @@
-CXX="g++"
-SOURCE="main.cpp"
-CXXFLAGS="-Wall"
-OUTPUT="stack"
+CXX=g++
+SOURCE=main.cpp
+CXXFLAGS=-Wall -O2
+OUTPUT=main
 
 all:
 	${CXX} ${SOURCE} ${CXXFLAGS} -o ${OUTPUT}
