--- a/Bogdan.Melnik/C_Plus_Plus/Vector/Makefile
+++ b/Bogdan.Melnik/C_Plus_Plus/Vector/Makefile
@@ -1,7 +1,7 @@
 CXX=g++
 SOURCE=main.cpp
-CXXFLAGS=-Wall -O2 -g
+CXXFLAGS=-Wall -O2 -g --std=c++0x
 OUTPUT=main
 
 all:
-	${CXX} ${SOURCE} ${CXXFLAGS} -o ${OUTPUT}
+	${CXX} ${CXXFLAGS} ${SOURCE} -o ${OUTPUT}
